--- a/assets/css/sass/views/_header.scss
+++ b/assets/css/sass/views/_header.scss
@@ -5,10 +5,27 @@
     right: 0;
     bottom: 0;
     left: 0;
+    opacity: 0;
+    pointer-events: none;
+    @include transition( opacity 600ms ease-out );
+    @extend .u-transition-300;
     @extend .u-color-white;
+    
+    body.has-open-menu & {
+        pointer-events: all;
+        opacity: 1;
+        overflow: scroll;
+    }
+
     .u-container {
         min-height: 100%;
         height: 100%;
+    }
+
+    .section__sidebar {
+        @include media($lg - 1, max) {
+            @include flex-basis(50%);
+        }
     }
 }
 .site-menu-content {
