build out single news template

--- a/assets/css/sass/base/_typography.scss
+++ b/assets/css/sass/base/_typography.scss
@@ -103,7 +103,7 @@ textarea {
  * ------------------------------------------ */
 
 p {
-	margin-top: $leading;
+	margin-top: $leading * 2;
     margin-bottom: 0;
 }
 
