--- a/assets/css/sass/blocks/_forms.scss
+++ b/assets/css/sass/blocks/_forms.scss
@@ -9,7 +9,7 @@ label {
 }
 
 .form-group {
-    @extend .u-clear;
+    @extend .u-clearfix;
     display: block;
     clear: both;
     @extend .u-mt-1;
