--- a/assets/css/sass/shared/utility/_layout.scss
+++ b/assets/css/sass/shared/utility/_layout.scss
@@ -1,6 +1,6 @@
 // Clearfix
 // ------------------------------------------ /
-.u-clear {
+.u-clearfix {
 	&:after {
 		content: "";
 		display: table;
