--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,7 +294,7 @@ h1, .h1 {
     h1, .h1 {
       font-size: 4.38rem; } }
 
-h2, blockquote, .h2, .primary-menu .menu-item {
+h2, blockquote, .h2 {
   font-family: "GT-America-Extended-Black", Arial, sans-serif;
   text-transform: uppercase;
   margin-top: 1rem;
@@ -302,10 +302,10 @@ h2, blockquote, .h2, .primary-menu .menu-item {
   font-size: 2.12rem;
   line-height: 1; }
   @media screen and (min-width: 768px) {
-    h2, blockquote, .h2, .primary-menu .menu-item {
+    h2, blockquote, .h2 {
       font-size: 3rem; } }
 
-h3, .h3 {
+h3, .h3, .primary-menu .menu-item {
   font-family: "GT-America-Extended-Black", Arial, sans-serif;
   text-transform: uppercase;
   margin-top: 1rem;
@@ -313,7 +313,7 @@ h3, .h3 {
   font-size: 2rem;
   line-height: 1.125em; }
   @media screen and (min-width: 768px) {
-    h3, .h3 {
+    h3, .h3, .primary-menu .menu-item {
       font-size: 2.25rem; } }
 
 h4, .h4 {
@@ -361,7 +361,7 @@ a {
 /* Copy
  * ------------------------------------------ */
 p {
-  margin-top: 1rem;
+  margin-top: 2rem;
   margin-bottom: 0; }
 
 ul, ol {
@@ -653,6 +653,12 @@ hr {
   -moz-transition: all 500ms ease;
   transition: all 500ms ease; }
 
+.u-width-1 {
+  width: 6.17%; }
+
+.u-width-2 {
+  width: 14.7%; }
+
 .u-span-3 {
   float: left;
   display: block;
@@ -693,6 +699,9 @@ hr {
 @media screen and (min-width: 768px) {
   .u-max-width-3 {
     max-width: 23.23%; } }
+
+.u-width-3 {
+  width: 23.23%; }
 
 .u-span-4 {
   float: left;
@@ -735,6 +744,9 @@ hr {
   .u-max-width-4 {
     max-width: 31.76%; } }
 
+.u-width-4 {
+  width: 31.76%; }
+
 .u-span-5 {
   float: left;
   display: block;
@@ -759,6 +771,9 @@ hr {
 @media screen and (min-width: 768px) {
   .u-max-width-5 {
     max-width: 40.29%; } }
+
+.u-width-5 {
+  width: 40.29%; }
 
 .u-span-6 {
   float: left;
@@ -785,6 +800,9 @@ hr {
   .u-max-width-6 {
     max-width: 48.82%; } }
 
+.u-width-6 {
+  width: 48.82%; }
+
 .u-span-7 {
   float: left;
   display: block;
@@ -809,6 +827,9 @@ hr {
 @media screen and (min-width: 768px) {
   .u-max-width-7 {
     max-width: 57.35%; } }
+
+.u-width-7 {
+  width: 57.35%; }
 
 .u-span-8 {
   float: left;
@@ -835,6 +856,9 @@ hr {
   .u-max-width-8 {
     max-width: 65.88%; } }
 
+.u-width-8 {
+  width: 65.88%; }
+
 .u-span-9 {
   float: left;
   display: block;
@@ -860,14 +884,26 @@ hr {
   .u-max-width-9 {
     max-width: 74.41%; } }
 
+.u-width-9 {
+  width: 74.41%; }
+
+.u-width-10 {
+  width: 82.94%; }
+
+.u-width-11 {
+  width: 91.47%; }
+
+.u-width-12 {
+  width: 100%; }
+
 [class*="u-span-"]:last-child {
   margin-right: 0; }
 
-.u-clear:after, .form-group:after {
+.u-clearfix:after, .form-group:after {
   content: "";
   display: table; }
 
-.u-clear:after, .form-group:after {
+.u-clearfix:after, .form-group:after {
   clear: both; }
 
 .u-container {
@@ -1085,7 +1121,7 @@ hr {
 .u-mr-4 {
   margin-right: 4rem; }
 
-.u-mb-4, .post-image {
+.u-mb-4 {
   margin-bottom: 4rem; }
 
 .u-ml-4 {
@@ -1171,7 +1207,7 @@ hr {
 .u-ma-6 {
   margin: 6rem; }
 
-.u-mt-6, .page-content, .post-content {
+.u-mt-6 {
   margin-top: 6rem; }
 
 .u-mr-6 {
