add page filters to news page

--- a/assets/css/sass/shared/_variables.scss
+++ b/assets/css/sass/shared/_variables.scss
@@ -10,7 +10,7 @@ $container-padding: 70px;
 $sm: 500px;
 $md: 768px;
 $lg: 1000px;
-$xl: 1500px;
+$xl: 1400px;
 
 // Borders
 // ------------------------------------------- /
@@ -59,7 +59,7 @@ $color-code: black;
 $color-blockquote: black;
 
 $color-background-body: white;
-$color-background-hr: lightgray;
+$color-background-hr: black;
 $color-background-pre: #eeeeee;
 
 $color-background-selection: $blue;
