--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -34,6 +34,7 @@
 
 @import
     "blocks/buttons",
+    "blocks/filters",
     "blocks/forms",
     "blocks/lists",
     "blocks/logo",
@@ -42,6 +43,7 @@
     "blocks/menu",
     "blocks/modules",
     "blocks/page",
+    "blocks/pagination",
     "blocks/post",
     "blocks/section",
     "blocks/tables";
