--- a/assets/css/sass/blocks/_pagination.scss
+++ b/assets/css/sass/blocks/_pagination.scss
@@ -10,11 +10,24 @@
 
     &.next,
     &.prev {
+        display: block;
+        @include media($md) {
+            display: inline;
+        }
         &:hover {
             color: $color-link-hover;
         }
     }
-    &.next { margin-left: 1rem; }
-    &.prev { margin-right: 1rem; }
+    &.next { 
+        @include media($md) {
+            margin-left: 1rem;
+        }
+    }
+    &.prev {
+        margin: 0 0 1rem;
+        @include media($md) {
+            margin: 0 1rem 0 0;
+        }
+    }
 
 }
