--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -360,9 +360,16 @@ a {
 
 /* Copy
  * ------------------------------------------ */
-p {
+p, .p {
   margin-top: 2rem;
-  margin-bottom: 0; }
+  margin-bottom: 0;
+  text-transform: none;
+  font-family: "GT-America-Regular", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 1.12rem;
+  line-height: 1.375em;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
 
 ul, ol {
   list-style: none;
@@ -1416,6 +1423,10 @@ label {
     color: lightgray; }
   .form-field:-ms-input-placeholder {
     color: lightgray; }
+
+.social .list__item,
+.page-anchors .list__item {
+  margin-top: 0; }
 
 .logo {
   display: block;
