--- a/assets/css/sass/views/_header.scss
+++ b/assets/css/sass/views/_header.scss
@@ -7,9 +7,47 @@
     left: 0;
     opacity: 0;
     pointer-events: none;
-    @include transition( opacity 600ms ease-out );
+    background-color: black;
+    color: white;
+    @include transition( opacity 600ms ease-out, background 300ms ease-out );
     @extend .u-transition-300;
     @extend .u-color-white;
+
+    a {
+        color: white;
+        
+        &:hover, &:focus {
+            color: $blue;
+        }
+    }
+    .primary-menu a {
+        &:hover, &:focus {
+            color: black;
+        }
+    }
+
+    &[data-background="projects"] {
+        background-color: $green;
+    }
+    &[data-background="team"] {
+        background-color: $purple;
+    }
+    &[data-background="about"] {
+        background-color: $red;
+    }
+    &[data-background="publications"] {
+        background-color: $orange;
+    }
+    &[data-background="news"] {
+        background-color: $teal;
+    }
+    &[data-background="contact"] {
+        background-color: $blue;
+    }
+
+    .flex__item {
+        border-color: white;
+    }
     
     body.has-open-menu & {
         pointer-events: all;
